card alignment fixed

--- a/pages/components/projects/Projects.module.css
+++ b/pages/components/projects/Projects.module.css
@@ -44,7 +44,8 @@
    position: relative;
    z-index: 2;
    text-align: center;
-   width: clamp(300px, 60vw, 800px);
+   width: 100%;
+   /* Adjusted width */
 }
 
 .content>p {
@@ -55,7 +56,8 @@
    font-weight: 300;
    font-size: clamp(0.75rem, 2.5vw, 1rem);
    text-align: center;
-   width: clamp(300px, 60vw, 800px);
+   width: 100%;
+   /* Adjusted width */
 }
 
 .projectsGrid {
